--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -35,6 +35,35 @@
                     </form>
                 </div>
                 <!--End mc_embed_signup-->
+                <!-- Social Media -->
+                <div class="row">
+                    <div class="col">
+                        <h3 class="upper">We like to exchange experiences!</h3>
+                        <ul class="social d-flex justify-content-center justify-content-md-start">
+                            <li>
+                                <a href="https://www.facebook.com/people/BIKE-WORLD/100092583005998/" target="_blank"
+                                    rel="noopener" aria-label="Go to the Facebook Bike World page">
+                                    <i class="fa-brands fa-facebook social-icon mx-4 my-3"></i><span
+                                        class="d-none">Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                                    aria-label="Go to the Instagram Bike World page">
+                                    <i class="fa-brands fa-instagram social-icon mx-4 my-3"></i><span
+                                        class="d-none">Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                                    aria-label="Go to the Twitter Bike World page">
+                                    <i class="fa-brands fa-twitter social-icon mx-4 my-3"></i><span
+                                        class="d-none">Twitter</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4 col-12">
                 <h3 class="upper">Help and Support</h3>
