feat: Change twitter link to strava link in footer

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -75,9 +75,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Go to the Twitter Bike World page">
-                        <i class="fa-brands fa-twitter social-icon mx-4 my-3"></i><span class="d-none">Twitter</span>
+                    <a href="https://www.strava.com/" target="_blank" rel="noopener"
+                        aria-label="Go to the Strava Bike World page">
+                        <i class="fa-brands fa-strava social-icon mx-4 my-3"></i><span class="d-none">Twitter</span>
                     </a>
                 </li>
             </ul>
