improvement: Rework meta description and keywords in meta block

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Discover high-performance mountain bikes from top brands. Shop now for durable frames, advanced suspensions, and reliable components. Buy online today!">
-    <meta name="keywords" content="Bikes, Mountainbikes">
+        content="Discover high-performance mountain bikes from top brands. Explore our Bike Shop with a wide range of MTB. Shop Now!">
+    <meta name="keywords"
+        content="Bikes, Mountain bikes, MTB, Mountain bike shop, Mountain biking, Hardtail mountainbikes bikes, Full suspension bikes, Bike shop, Outdoor adventure, Bike sales, Bike trails, Cross-country bikes, Enduro Bikes, Outdoor sports equipment">
     <meta name="author" content="Kerstin Weibeler">
+
     <!-- Google Verification -->
-    <meta name="google-site-verification" content="dzRYMMetjbhvqtaQEcd2-xUGd3USb5U5zsozwPuJmMs" />
+    <meta name="google-site-verification" content="dzRYMMetjbhvqtaQEcd2-xUGd3USb5U5zsozwPuJmMs">
     {% endblock %}
 
     {% block extra_meta %}
