improvement: In Navbar activity add bikes to categories

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -11,7 +11,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="brand-logo" href="{% url 'index' %}"><img class="brand-logo"
-                    src="{{ MEDIA_URL }}homepage-images/logo.webp" alt="Bike World Logo"></a>
+                    src="{{ MEDIA_URL }}homepage-images/logo.webp" alt="Logo of Bike World Bike shop"></a>
             <!-- Collapsible wrapper -->
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
@@ -27,7 +27,7 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=all_mountain">
-                                        <p>All Mountain</p>
+                                        <p>All Mountain Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/all-mountain.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
@@ -35,7 +35,7 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=enduro">
-                                        <p>Enduro</p>
+                                        <p>Enduro Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/enduro.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
@@ -45,7 +45,7 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=cross_country">
-                                        <p>Cross Country</p>
+                                        <p>Cross Country Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/cross-country.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
@@ -54,7 +54,7 @@
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=trail">
-                                        <p>Trail</p>
+                                        <p>Trail Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/trail.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
