--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,7 +159,7 @@ a {
 }
 
 .dropdown-item p:hover {
-    font-weight: 500;
+    transform: scale(1.1);
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
