improvement: Adapt block title to show correct page title

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 
 {% block title %}
-Find your Mountain for your adventure.
+Find a Mountain Bike for your adventure.
 {% endblock %}
 
 {% block content %}
