--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -58,7 +58,7 @@
 
         </div>
         <!-- Social Media -->
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column border-top border-dark">
             <p class="upper text-center mt-5 mb-1">We like to exchange experiences!</p>
             <ul class="social d-flex justify-content-center">
                 <li>
