--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -69,4 +69,5 @@ Our Mountainbikes
 <script src="{% static 'products/js/back_to_top.js' %}"></script>
 <script src="{% static 'products/js/filters.js' %}"></script>
 {% include 'products/components/add_product_to_bag_script.html' %}
+<script src="{% static 'products/js/add_to_wishlist.js' %}"></script>
 {% endblock %}
