--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -70,4 +70,5 @@ Find a Mountain Bike for your adventure.
 {{ block.super }}
 <!-- Products JS -->
 {% include 'products/components/add_product_to_bag_script.html' %}
+<script src="{% static 'products/js/add_to_wishlist.js' %}"></script>
 {% endblock %}
