--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -50,7 +50,8 @@
         <i class="fa-solid fa-heart fa-lg"></i>
     </a>
     {% else %}
-    <form id="add-to-wishlist-form" data-url="{% url 'add_to_wishlist' product.id %}">
+    <form id="add-to-wishlist-form-{{ product.id }}" data-wishlist-product-id="{{ product.id }}" data-url="
+        {% url 'add_to_wishlist' product.id %}">
         {% csrf_token %}
         <button class="btn btn-wishlist btn-shop-lg" type="submit" aria-label="Add to Wishlist">
             <i class="fa-regular fa-heart fa-lg"></i>
