--- a/static/css/base.css
+++ b/static/css/base.css
@@ -517,13 +517,6 @@ footer ul {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-#wishlist-error-message {
-    display: none;
-    color: red;
-    font-size: 14px;
-    margin-top: 8px;
-}
-
 .add-wishlist {
     width: 40px;
     height: 40px;
@@ -567,7 +560,7 @@ footer ul {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
 
-#error-container-bag {
+.error-container-bag {
     display: none;
     background-color: #ffcccc;
     color: #cc0000;
