--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <!-- Add to Bag -->
-                    <div id="error-container-bag" class="error-container-bag"></div>
+                    <div id="error-container-bag-{{ product.id }}" class="error-container-bag"></div>
                     <div class="d-flex align-items-center">
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"
