--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -73,7 +73,7 @@
             data-bs-parent="#accordionDetail">
             <div class="accordion-body">
                 {% for review in reviews %}
-                {% if user.is_superuser %}
+                {% if user.is_superuser or request.user == review.user %}
                 <form action="{% url 'review_delete' review.pk %}" method="POST">
                     {% csrf_token %}
                     <button class="btn p-0 btn-sm border-0 text-danger" type="submit"><i
