--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -29,7 +29,7 @@
                                         href="{% url 'products' %}?category=all_mountain">
                                         <p>All Mountain Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/all-mountain.webp"
-                                            alt="Picture of Mountainbike" class="dropdown-img">
+                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
                                     </a>
                                 </li>
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
@@ -37,7 +37,7 @@
                                         href="{% url 'products' %}?category=enduro">
                                         <p>Enduro Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/enduro.webp"
-                                            alt="Picture of Mountainbike" class="dropdown-img">
+                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
                                     </a>
                                 </li>
                             </div>
@@ -47,16 +47,15 @@
                                         href="{% url 'products' %}?category=cross_country">
                                         <p>Cross Country Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/cross-country.webp"
-                                            alt="Picture of Mountainbike" class="dropdown-img">
+                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
                                     </a>
                                 </li>
-
                                 <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=trail">
                                         <p>Trail Bikes</p>
                                         <img src="{{ MEDIA_URL }}homepage-images/trail.webp"
-                                            alt="Picture of Mountainbike" class="dropdown-img">
+                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
                                     </a>
                                 </li>
                             </div>
@@ -77,14 +76,14 @@
                                             href="{% url 'products' %}?brand=Cannondale">
                                             <p>Cannondale</p>
                                             <img src="{{ MEDIA_URL }}homepage-images/cannondale.svg"
-                                                alt="Cannondale Logo" class="dropdown-img-brand">
+                                                alt="Cannondale Brand Logo" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Fuji">
                                             <p>Fuji</p>
-                                            <img src="{{ MEDIA_URL }}homepage-images/fuji.webp" alt="Fuji Logo"
+                                            <img src="{{ MEDIA_URL }}homepage-images/fuji.webp" alt="Fuji Brand Logo"
                                                 class="dropdown-img-brand">
                                         </a>
                                     </li>
@@ -96,7 +95,7 @@
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Scott">
                                             <p>Scott</p>
-                                            <img src="{{ MEDIA_URL }}homepage-images/scott.webp" alt="Scott Logo"
+                                            <img src="{{ MEDIA_URL }}homepage-images/scott.webp" alt="Scott Brand Logo"
                                                 class="dropdown-img-brand">
                                         </a>
                                     </li>
@@ -105,7 +104,7 @@
                                             href="{% url 'products' %}?brand=Specialized">
                                             <p>Specialized</p>
                                             <img src="{{ MEDIA_URL }}homepage-images/specialized.webp"
-                                                alt="Specialized Logo" class="dropdown-img-brand">
+                                                alt="Specialized Brand Logo" class="dropdown-img-brand">
                                         </a>
                                     </li>
                                 </div>
