improvement: Move back_to_top_button JS and CSS to main directory JS and CSS and use button on Profile

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -265,6 +265,8 @@ Your Profile
                 </div>
             </div>
         </div>
+        <!-- Back to Top Button -->
+        {% include 'components/back_to_top_button.html' %}
     </section>
 </main>
 {% endblock %}
@@ -280,4 +282,6 @@ Your Profile
 <script type="text/javascript" src="{% static 'profiles/js/profile_btn_toggle.js' %}"></script>
 <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 <script type="text/javascript" src="{% static 'profiles/js/star_rating.js' %}"></script>
+<!-- Back To Top Script-->
+<script src="{% static 'js/back_to_top.js' %}"></script>
 {% endblock %}
