--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -52,9 +52,7 @@ Our Mountainbikes
         </div>
 </section>
 <!-- Back to Top Button -->
-<button type="button" class="btn btn-floating" id="btn-back-to-top" aria-label="Back to Top">
-    <i class="fas fa-arrow-up"></i>
-</button>
+{% include 'components/back_to_top_button.html' %}
 
 <!-- Pagination -->
 {% if is_paginated %}
@@ -65,8 +63,9 @@ Our Mountainbikes
 
 {% block postloadjs %}
 {{ block.super }}
+<!-- Back To Top Script-->
+<script src="{% static 'js/back_to_top.js' %}"></script>
 <!-- Products JS -->
-<script src="{% static 'products/js/back_to_top.js' %}"></script>
 <script src="{% static 'products/js/filters.js' %}"></script>
 {% include 'products/components/add_product_to_bag_script.html' %}
 <script src="{% static 'products/js/add_to_wishlist.js' %}"></script>
