--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,15 @@ a {
     text-decoration: none;
 }
 
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    border: #000 1px solid;
+    border-radius: 50%;
+}
+
 .page-container {
     min-height: 70vh;
 }
