--- a/templates/components/toasts/toast_error.html
+++ b/templates/components/toasts/toast_error.html
@@ -2,7 +2,7 @@
     aria-live="assertive" aria-atomic="true">
     <div class="arrow-up"></div>
     <div class="toast-header bg-white text-dark rounded-top">
-        <strong class="me-auto text-danger"><i class="fa-solid fa-triangle-exclamation">&nbsp;Error!</i></strong>
+        <strong class="me-auto text-danger"><i class="fa-solid fa-triangle-exclamation"></i>&nbsp;Oopsie daisy!</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
