--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -3,6 +3,7 @@
     aria-live="assertive" aria-atomic="true">
     <div class="arrow-up"></div>
     <div class="toast-header bg-white text-dark rounded-top d-flex justify-content-end">
+        <strong class="me-auto text-success"><i class="fa-solid fa-check"></i>&nbsp;Nailed it!</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
