improvement: Keep wishlist collapsible open after deleting a product. > Adapt the Profile Page so that it maintains the state of the wishlist collapsible when a user deletes a product from their wishlist. Therefore I updated the wishlist in the template to include collapseWishlist parameter in the URL. I modified the WishListDeleteView to redirect to the profile page with the collapseWishlist paramter in the Url. Also, I updated the JS code to check for collapseWishlist parameter in the Url and open the wishlist collapsible

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -169,7 +169,8 @@ Your Profile
                                             <i class="fa-solid fa-cart-shopping"></i> Add to Bag
                                         </button>
                                     </form>
-                                    <form method="post" action="{% url 'wishlist-delete' item.id %}">
+                                    <form method="post"
+                                        action="{% url 'wishlist-delete' item.id %}?collapseWishlist=true">
                                         {% csrf_token %}
                                         <button class="btn btn-secondary rounded-0 m-3 text-nowrap" type="submit"><i
                                                 class="fa-regular fa-trash-can"></i> Delete</button>
