--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -23,42 +23,40 @@
                         <a class="nav-link dropdown-toggle" id="dropdownMenuActivity" data-bs-toggle="dropdown"
                             data-bs-display="static" aria-expanded="false" href="#">Activity</a>
                         <ul class="dropdown-menu activity mb-2" aria-labelledby="dropdownMenuActivity">
-                            <div class="d-flex justify-content-center">
-                                <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
-                                    <a class="dropdown-item d-flex flex-column"
-                                        href="{% url 'products' %}?category=all_mountain">
-                                        <p>All Mountain Bikes</p>
-                                        <img src="{{ MEDIA_URL }}homepage-images/all-mountain.webp"
-                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
-                                    </a>
-                                </li>
-                                <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
-                                    <a class="dropdown-item d-flex flex-column"
-                                        href="{% url 'products' %}?category=enduro">
-                                        <p>Enduro Bikes</p>
-                                        <img src="{{ MEDIA_URL }}homepage-images/enduro.webp"
-                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
-                                    <a class="dropdown-item d-flex flex-column"
-                                        href="{% url 'products' %}?category=cross_country">
-                                        <p>Cross Country Bikes</p>
-                                        <img src="{{ MEDIA_URL }}homepage-images/cross-country.webp"
-                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
-                                    </a>
-                                </li>
-                                <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
-                                    <a class="dropdown-item d-flex flex-column"
-                                        href="{% url 'products' %}?category=trail">
-                                        <p>Trail Bikes</p>
-                                        <img src="{{ MEDIA_URL }}homepage-images/trail.webp"
-                                            alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
-                                    </a>
-                                </li>
-                            </div>
+                            <li class="d-flex justify-content-between">
+                                <ul class="list-unstyled">
+                                    <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3 d-flex flex-column">
+                                        <a class="dropdown-item" href="{% url 'products' %}?category=all_mountain">
+                                            <p>All Mountain Bikes</p>
+                                            <img src="{{ MEDIA_URL }}homepage-images/all-mountain.webp"
+                                                alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
+                                        </a>
+                                    </li>
+                                    <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3 d-flex flex-column">
+                                        <a class="dropdown-item" href="{% url 'products' %}?category=enduro">
+                                            <p>Enduro Bikes</p>
+                                            <img src="{{ MEDIA_URL }}homepage-images/enduro.webp"
+                                                alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="list-unstyled">
+                                    <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3 d-flex flex-column">
+                                        <a class="dropdown-item" href="{% url 'products' %}?category=cross_country">
+                                            <p>Cross Country Bikes</p>
+                                            <img src="{{ MEDIA_URL }}homepage-images/cross-country.webp"
+                                                alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
+                                        </a>
+                                    </li>
+                                    <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3 d-flex flex-column">
+                                        <a class="dropdown-item" href="{% url 'products' %}?category=trail">
+                                            <p>Trail Bikes</p>
+                                            <img src="{{ MEDIA_URL }}homepage-images/trail.webp"
+                                                alt="Picture of a Mountainbike on a Trail" class="dropdown-img">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <!-- Dropw Down Brand-->
@@ -66,11 +64,13 @@
                         <a class="nav-link dropdown-toggle" id="dropdownMenuBrand" data-mdb-toggle="dropdown"
                             aria-expanded="false" href="#">Brands</a>
                         <ul class="dropdown-menu dropwdown-menu-brand brand mb-2" aria-labelledby="dropdownMenuBrand">
-                            <p class="mx-3 my-2 dropdown-menu-brand-heading">
-                                Top Brands
-                            </p>
-                            <div class="row">
-                                <div class="col-12 d-flex justify-content-center">
+                            <li>
+                                <p class="mx-3 my-2 dropdown-menu-brand-heading">
+                                    Top Brands
+                                </p>
+                            </li>
+                            <li class="d-flex justify-content-between align-items-center">
+                                <ul class="list-unstyled">
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Cannondale">
@@ -87,10 +87,8 @@
                                                 class="dropdown-img-brand">
                                         </a>
                                     </li>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 d-flex justify-content-center">
+                                </ul>
+                                <ul class="list-unstyled">
                                     <li class="mx-sm-0 mx-md-3 mx-lg-5 my-sm-1 my-md-3">
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Scott">
@@ -107,8 +105,8 @@
                                                 alt="Specialized Brand Logo" class="dropdown-img-brand">
                                         </a>
                                     </li>
-                                </div>
-                            </div>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item sale mx-1">
