fix: Validation issue a must not appear as a descendant of button for cta on homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@ Find a Mountain Bike for your adventure.
             <div class="circle">
                 <div class="hero-content">
                     <h1 class="upper">Ride like a pro, shop with us!</h1>
-                    <button class="btn btn-cta upper"><a href="{% url 'products' %}">Shop Now</a></button>
+                    <a href="{% url 'products' %}" class="btn btn-cta upper">Shop Now</a>
                 </div>
             </div>
         </div>
