fix: fix: Validation issue a must not appear as a descendant of button for cta on bag-offcanvas

--- a/templates/components/bag_offcanvas.html
+++ b/templates/components/bag_offcanvas.html
@@ -60,7 +60,7 @@
             {% else %}
             <div>
                 <p>You don't have any products in your bag, yet.</p>
-                <button class="btn btn-cta upper w-100"><a href="{% url 'products' %}">Find a Bike</a></button>
+                <a href="{% url 'products' %}" class="btn btn-cta upper w-100r">Find a Bike</a>
             </div>
             {% endif %}
         </div>
