improvement: Add product.id to deleteProductModal

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -28,7 +28,7 @@ Our Mountainbikes
                                 class="fa-regular fa-pen-to-square fa-sm"></i>&nbsp;Edit</a></small>
                     <small class="mb-3">
                         <button class="btn p-0 btn-sm border-0 text-danger" type="button" data-bs-toggle="modal"
-                            data-bs-target="#deleteProductModal" aria-expanded="false"><i
+                            data-bs-target="#deleteProductModal-{{ product.id }}" aria-expanded="false"><i
                                 class="fa-regular fa-trash-can fa-sm"></i>&nbsp;Delete</button>
                     </small>
                 </div>
