--- a/products/templates/products/components/product_delete_modal.html
+++ b/products/templates/products/components/product_delete_modal.html
@@ -1,4 +1,4 @@
-<div id="deleteProductModal" class="modal" tabindex="-1">
+<div id="deleteProductModal-{{ product.id }}" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
