--- a/templates/components/bag_offcanvas.html
+++ b/templates/components/bag_offcanvas.html
@@ -37,12 +37,10 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <strong>
-                        <p class="mt-3 mb-3 text-black">
-                            Order Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
-                            <span class="float-right">{{ total|intcomma }}&nbsp;€</span>
-                        </p>
-                    </strong>
+                    <p class="mt-3 mb-3 text-black">
+                        <strong>Order Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+                            <span class="float-right">{{ total|intcomma }}&nbsp;€</span></strong>
+                    </p>
                     {% if free_delivery_delta > 0 %}
                     <p class="mb-1 text-orange text-center">
                         Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free
